--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "1.0.0"
 authors = [
   { name="Mohsen Sadeghi", email="mohsen.sadeghi@fu-berlin.de" },
 ]
-description = "Software package for deep learning based segmentation and reconstruction of cryo soft-xray tomograms"
+description = "Software package for deep learning based segmentation and reconstruction of cellular cryo soft-xray tomograms"
 readme = "README.md"
 license = { file="LICENSE" }
 requires-python = ">=3.7"
@@ -18,6 +18,9 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 
+packages = ["deep_sxt"]
+
 [project.urls]
-"Homepage" = "https://github.com/pypa/sampleproject"
-"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
+"Homepage" = "https://github.com/noegroup/deep_sxt"
+"Bug Tracker" = "https://github.com/noegroup/deep_sxt/issues"
+
